# panoply

./: .gitignore  :w  Cargo.toml  LICENSE  README.md  TODOs.md  cabal.project  default.nix
.cargo/: config.toml
analysis/: Cargo.toml
analysis/src/: base.rs  effect.rs  find_or_collect.rs  lib.rs  module.rs  modules.rs  name.rs  names.rs  ops.rs  resolve.rs  top_level.rs
ast/: Cargo.toml
ast/src/: lib.rs
base/: Cargo.toml
base/src/: displayer.rs  loc.rs  option.rs
base/src/memory/: arena.rs
core/: Cargo.toml
core/src/: ast.rs  cst.rs  diagnostic.rs  display_iter.rs  error.rs  file.rs  graph.rs  handle.rs  id.rs  if_none.rs  indexed.rs  ir.rs  lib.rs  loc.rs  modules.rs  nst.rs  option.rs  span.rs  spanner.rs  token.rs  ty.rs
core/src/diagnostic/: aiahr.rs  english.rs  lexer.rs  nameres.rs  parser.rs  tc.rs
core/src/memory/: arena.rs  handle.rs  intern.rs
core/src/ty/: alloc.rs  evidence.rs  fold.rs  infer.rs  row.rs
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/base/: Cargo.toml
crates/base/src/: diagnostic.rs  display_iter.rs  displayer.rs  file.rs  graph.rs  id.rs  id_converter.rs  indexed.rs  lib.rs  loc.rs  memory.rs  modules.rs  option.rs  pretty.rs  span.rs  spanner.rs
crates/base/src/diagnostic/: english.rs  error.rs  lexer.rs  nameres.rs  parser.rs  tc.rs
crates/base/src/memory/: arena.rs  handle.rs  intern.rs
crates/cst/: Cargo.toml
crates/cst/src/: lib.rs  nameres.rs
crates/desugar/: Cargo.toml
crates/desugar/src/: lib.rs
crates/emit-wasm/: Cargo.toml
crates/emit-wasm/src/: emitter.rs  lib.rs
crates/interpreter/: Cargo.toml
crates/lower-medir/: Cargo.toml
crates/lower-medir/src/: lib.rs  lower.rs
crates/lower-reducir/: Cargo.toml
crates/lower-reducir/src/: evidence.rs  lib.rs  lower.rs  lower_mon.rs
crates/medir/: Cargo.toml
crates/medir/src/: lib.rs  pretty.rs
crates/nameres/: Cargo.toml
crates/nameres/src/: base.rs  effect.rs  lib.rs  module.rs  name.rs  names.rs  ops.rs  resolve.rs  top_level.rs
crates/optimize-reducir/: Cargo.toml
crates/optimize-reducir/src/: lib.rs  occurrence.rs  simplify.rs  subst.rs
crates/parser/: Cargo.toml
crates/parser/src/: expr.rs  lexer.rs  lib.rs  locator.rs  parser.rs  parser_old.rs
crates/reducir/: Cargo.toml
crates/reducir/src/: lib.rs  mon.rs  optimized.rs  pretty.rs  ty.rs  zip_non_consuming.rs
crates/reducir/src/ty/: pretty.rs  subst.rs
crates/tc/: Cargo.toml
crates/tc/src/: diagnostic.rs  folds.rs  infer.rs  lib.rs  unsolved_row.rs
crates/tc/src/infer/: row_solver.rs  unification.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: ast.rs  cst.rs  lib.rs  nst.rs  span.rs
crates/ty/: Cargo.toml
crates/ty/src/: alloc.rs  evidence.rs  fold.rs  infer.rs  lib.rs  pretty.rs  row.rs
crates/ty/src/row/: closed_row.rs  pretty.rs
crates/ty/src/row/closed_row/: scoped.rs  simple.rs
cst/: Cargo.toml
cst/src/: lib.rs  nameres.rs
desugar/: Cargo.toml
desugar/src/: lib.rs
emit-wasm/: Cargo.toml
emit-wasm/src/: lib.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs
ir/: Cargo.toml
ir/src/: lib.rs
lower-ir/: Cargo.toml
lower-ir/ir-matcher/: Cargo.toml
lower-ir/ir-matcher/src/: lib.rs
lower-ir/src/: evidence.rs  id_converter.rs  ir_ctx.rs  lib.rs  lower.rs
lower-medir/: Cargo.toml
lower-medir/src/: lib.rs  lower.rs
lower-reducir/: Cargo.toml
lower-reducir/src/: evidence.rs  id_converter.rs  lib.rs  lower.rs  lower_mon.rs
medir/: Cargo.toml
medir/src/: lib.rs  pretty.rs
mixin/: CHANGELOG.md  default.nix  mixin.cabal
nameres/: Cargo.toml
nameres/src/: base.rs  effect.rs  lib.rs  module.rs  name.rs  names.rs  resolve.rs  top_level.rs
optimize-reducir/: Cargo.toml
optimize-reducir/src/: lib.rs
parser/: Cargo.toml
parser/src/: cst.rs  error.rs  expr.rs  lexer.rs  lib.rs  loc.rs  locator.rs  parser.rs  span.rs  token.rs
proto/: .envrc  CHANGELOG.md  default.nix  proto.cabal
proto/src/: CC.hs  Constraint.hs  Core.hs  Example.hs  Fresh.hs  Generalize.hs  Interpret.hs  Lib.hs  Main.hs  OutsideIn.hs  Pretty.hs  Program.hs  Subst.hs  TVarSet.hs  Term.hs  Type.hs  Unity.hs
proto/src/CC/: Prompt.hs
proto/src/Core/: Builtin.hs
proto/test/: Tests.hs
reducir/: Cargo.toml
reducir/src/: lib.rs  mon.rs  optimized.rs  pretty.rs  ty.rs  zip_non_consuming.rs
reducir/src/ty/: pretty.rs  subst.rs
src/: lib.rs
tc/: Cargo.toml
tc/src/: constraint.rs  diagnostic.rs  evidence.rs  folds.rs  infer.rs  infer_ty.rs  lib.rs  subst.rs  ty.rs  unsolved_row.rs
tc/src/infer/: row_solver.rs  unification.rs
tc/src/ty/: fold.rs  row.rs
test-utils/: Cargo.toml
test-utils/src/: ast.rs  cst.rs  lib.rs  nst.rs  span.rs
testbed/: eff_item.pan  example.aiahr  example.opt.wasm  example.pan  example.wat  index.html  inner_outer.pan  multi.pan  opt-wat.sh  reader.pan  state.pan  wand.opt.wasm  wand.opt.wat  wand.pan  wand.wasm  wand.wat
ty/: Cargo.toml
ty/src/: alloc.rs  evidence.rs  fold.rs  infer.rs  lib.rs  pretty.rs  row.rs
ty/src/row/: closed_row.rs  pretty.rs
ty/src/row/closed_row/: scoped.rs  simple.rs
