[package]
name = "aiahr"
version = "0.1.0"
edition.workspace = true
default-run = "interpreter"

[lib]
name = "aiahr"

[[bin]]
name = "interpreter"

[[bin]]
name = "lsp"

[dependencies]
aiahr-ast.workspace = true
aiahr-core.workspace = true
aiahr-desugar.workspace = true
aiahr-interpreter.workspace = true
aiahr-ir.workspace = true
aiahr-lower-ir.workspace = true
aiahr-nameres.workspace = true
aiahr-parser.workspace = true
aiahr-tc.workspace = true
aiahr-ty.workspace = true
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
eyre.workspace = true
log.workspace = true
pretty.workspace = true
salsa.workspace = true
tower-lsp.workspace = true
tokio.workspace = true

[workspace]
members = [
    "ast",
    "core",
    "cst",
    "desugar",
    "interpreter",
    "ir",
    "lower-ir",
    "nameres",
    "parser",
    "tc",
    "test-utils",
    "ty",
]
[workspace.package]
edition = "2021"

# Add all new dependencies here so that we keep the versions consistent across crates.
#
# Unless necessary, don't specify patch numbers for dependencies whose major version number is
# non-zero.
[workspace.dependencies]
aiahr-ast = { path = "ast" }
aiahr-core = { path = "core" }
aiahr-cst = { path = "cst" }
aiahr-desugar = { path = "desugar" }
aiahr-nameres = { path = "nameres" }
aiahr-interpreter = { path = "interpreter" }
aiahr-ir = { path = "ir" }
aiahr-lower-ir = { path = "lower-ir" }
aiahr-parser = { path = "parser" }
aiahr-tc = { path = "tc" }
aiahr-test = { path = "test-utils" }
aiahr-ty = { path = "ty" }
assert_matches = "1.5" # TODO: use `std` version when stabilized.
bitflags = "1.3"
bumpalo = "3.10"
bumpalo-herd = "0.1.2"
chumsky = "0.9"
clap = "4.2"
dashmap = "5.4"
ena = "0.14.0"
env_logger = "0.10"
expect-test = "1.4"
eyre = "0.6.8"
im = "15.1"
la-arena = "0.3.0"
log = "0.4"
pretty = "0.11.3"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8.5"
regex = "1.6"
rustc-hash = "1.1"
salsa = { git = "https://github.com/salsa-rs/salsa/", branch = "master", package = "salsa-2022" }
syn = "1.0"
tower-lsp = "0.19.0"
tokio = { version = "1.27", features = ["full"] }
