[package]
name = "aiahr"
version = "0.1.0"
edition.workspace = true
default-run = "interpreter"

[lib]
name = "aiahr"

[[bin]]
name = "interpreter"

[[bin]]
name = "lsp"

[[bin]]
name = "wasm"

[dependencies]
ast.workspace = true
base.workspace = true
desugar.workspace = true
emit-wasm.workspace = true
interpreter.workspace = true
reducir.workspace = true
lower-reducir.workspace = true
lower-medir.workspace = true
medir.workspace = true
nameres.workspace = true
optimize-reducir.workspace = true
parser.workspace = true
tc.workspace = true
ty.workspace = true
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
fern.workspace = true
log.workspace = true
pretty.workspace = true
salsa.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
wasmtime.workspace = true
wasmprinter.workspace = true
wasmparser.workspace = true

[workspace]
members = [
    "crates/*",
    #"ast",
    #"base",
    #"cst",
    #"desugar",
    #"emit-wasm",
    #"interpreter",
    #"lower-medir",
    #"lower-reducir",
    #"medir",
    #"nameres",
    #"optimize-reducir",
    #"parser",
    #"reducir",
    #"tc",
    #"test-utils",
    #"ty",
]

[workspace.package]
edition = "2021"

# Add all new dependencies here so that we keep the versions consistent across crates.
#
# Unless necessary, don't specify patch numbers for dependencies whose major version number is
# non-zero.
[workspace.dependencies]
# Our crates
ast = { path = "crates/ast" }
base = { path = "crates/base" }
cst = { path = "crates/cst" }
desugar = { path = "crates/desugar" }
emit-wasm = { path = "crates/emit-wasm" }
interpreter = { path = "crates/interpreter" }
lower-medir = { path = "crates/lower-medir" }
lower-reducir = { path = "crates/lower-reducir" }
medir = { path = "crates/medir" }
nameres = { path = "crates/nameres" }
optimize-reducir = { path = "crates/optimize-reducir" }
parser = { path = "crates/parser" }
reducir = { path = "crates/reducir" }
tc = { path = "crates/tc" }
test-utils = { path = "crates/test-utils" }
ty = { path = "crates/ty" }

# External crates
assert_matches = "1.5" # TODO: use `std` version when stabilized.
bitflags = "1.3"
bumpalo = "3.10"
bumpalo-herd = "0.1.2"
chumsky = "0.9"
clap = "4.2"
dashmap = "5.5"
ena = "0.14.0"
fern = "0.6"
expect-test = "1.4"
eyre = "0.6.8"
im = "15.1"
la-arena = "0.3.0"
log = "0.4"
pretty = "0.11.3"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8.5"
regex = "1.6"
rustc-hash = "1.1"
salsa = { git = "https://github.com/salsa-rs/salsa/", branch = "master", package = "salsa-2022" }
syn = "1.0"
tower-lsp = "0.19.0"
tokio = { version = "1.27", features = ["full"] }
wasmtime = { version = "15.0.1", features = ["coredump"] }
wasmprinter = "0.2.64"
wasmparser = "0.112.0"
