[package]
name = "panoply"
version = "0.1.0"
edition.workspace = true
default-run = "interpreter"

[lib]
name = "panoply"

[[bin]]
name = "interpreter"

[[bin]]
name = "lsp"

[dependencies]
ast.workspace = true
base.workspace = true
desugar.workspace = true
emit-wasm.workspace = true
reducir.workspace = true
lower-reducir.workspace = true
lower-medir.workspace = true
medir.workspace = true
nameres.workspace = true
optimize-reducir.workspace = true
parser.workspace = true
tc.workspace = true
ty.workspace = true
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
fern.workspace = true
log.workspace = true
pretty.workspace = true
salsa.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
wasmtime.workspace = true
wasmprinter.workspace = true
wasmparser.workspace = true

[workspace]
members = [
  "crates/*",
]

[workspace.package]
edition = "2024"

# Add all new dependencies here so that we keep the versions consistent across crates.
#
# Unless necessary, don't specify patch numbers for dependencies whose major version number is
# non-zero.
[workspace.dependencies]
# Our crates
ast = { path = "crates/ast" }
base = { path = "crates/base" }
cst = { path = "crates/cst" }
desugar = { path = "crates/desugar" }
emit-wasm = { path = "crates/emit-wasm" }
lower-medir = { path = "crates/lower-medir" }
lower-reducir = { path = "crates/lower-reducir" }
medir = { path = "crates/medir" }
nameres = { path = "crates/nameres" }
optimize-reducir = { path = "crates/optimize-reducir" }
parser = { path = "crates/parser" }
reducir = { path = "crates/reducir" }
tc = { path = "crates/tc" }
test-utils = { path = "crates/test-utils" }
ty = { path = "crates/ty" }

# External crates
assert_matches = "1.5" # TODO: use `std` version when stabilized.
bitflags = "2.11"
bit-set = "0.9"
bumpalo = "3.20"
bumpalo-herd = "0.1.2"
clap = "4.6"
dashmap = "6.1"
difference = "2.0"
ena = "0.14.0"
fern = "0.7"
expect-test = "1.5"
eyre = "0.6"
im = "15.1"
la-arena = "0.3.0"
log = "0.4"
logos = "0.16"
pretty = "0.12"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.10"
regex = "1.12"
rowan = "0.16"
rustc-hash = "2.1"
salsa = "0.24"
syn = "1.0"
tower-lsp = "0.20"
tokio = { version = "1.50", features = ["full"] }
wasmtime = { version = "43", features = ["coredump"] }
wasmprinter = "0.245"
wasmparser = "0.245"
wasm-encoder = "0.245"
