[package]
name = "aiahr-analysis"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiahr-core.workspace = true
aiahr-parser.workspace = true
bumpalo.workspace = true
rustc-hash.workspace = true
salsa.workspace = true

[dev-dependencies]
assert_matches.workspace = true
chumsky.workspace = true
aiahr-test.workspace = true
