[package]
name = "aiahr-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
test_utils = ["rand"]

[dependencies]
bitflags = "1.3"
bumpalo = "3.10"
bumpalo-herd = "0.1.2"
chumsky = "0.8"
rustc-hash = "1.1.0"
pretty = { version = "0.11.3", optional = true }
rand = { version = "0.8.5", optional = true }

[dependencies.dashmap]
version = "5.4"
features = ["raw-api"]

[dev-dependencies]
assert_matches = "1.5" # TODO: use `std` version when stabilized.
