[package]
name = "aiahr-core"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
test_utils = ["rand"]

[dependencies]
bitflags.workspace = true
bumpalo.workspace = true
bumpalo-herd.workspace = true
chumsky.workspace = true
dashmap = { workspace = true, features = ["raw-api"] }
pretty = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rustc-hash.workspace = true

[dev-dependencies]
assert_matches = { workspace = true }
