[package]
name = "aiahr-desugar"
version = "0.1.0"
edition.workspace = true

[dependencies]
aiahr-core.workspace = true
aiahr-analysis.workspace = true
bumpalo.workspace = true
rustc-hash.workspace = true
salsa.workspace = true

[dev-dependencies]
aiahr-parser.workspace = true
aiahr-test.workspace = true
rand.workspace = true
