[package]
name = "aiahr-desugar"
version = "0.1.0"
edition.workspace = true

[dependencies]
aiahr-ast.workspace = true
aiahr-core.workspace = true
aiahr-nameres.workspace = true
bumpalo.workspace = true
la-arena.workspace = true
rustc-hash.workspace = true
salsa.workspace = true

[dev-dependencies]
aiahr-parser.workspace = true
aiahr-test.workspace = true
expect-test.workspace = true
pretty.workspace = true
rand.workspace = true
