[package]
name = "aiahr-emit-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
aiahr-ast.workspace = true
aiahr-desugar.workspace = true
aiahr-lower-reducir.workspace = true
aiahr-nameres.workspace = true
aiahr-parser.workspace = true
aiahr-tc.workspace = true
aiahr-ty.workspace = true
aiahr-test.workspace = true
expect-test.workspace = true
pretty.workspace = true
wasmprinter.workspace = true
wasmparser.workspace = true

[dependencies]
aiahr-core.workspace = true
aiahr-lower-medir.workspace = true
aiahr-medir.workspace = true
aiahr-optimize-reducir.workspace = true
aiahr-reducir.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
wasm-encoder = "0.32.0"
