[package]
name = "aiahr-interpreter"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
aiahr-ast.workspace = true
aiahr-desugar.workspace = true
aiahr-nameres.workspace = true
aiahr-parser.workspace = true
aiahr-tc.workspace = true
aiahr-ty.workspace = true
aiahr-lower-ir.workspace = true

[dependencies]
aiahr-core.workspace = true
aiahr-ir.workspace = true
im.workspace = true
log.workspace = true
pretty.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
