[package]
name = "lower-ir"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
assert_matches = "1.5.0"
aiahr-tc = { path = "../tc" }
aiahr-parser = { path = "../parser" }
aiahr-desugar = { path = "../desugar" }
aiahr-analysis = { path = "../analysis" }

[dependencies]
aiahr-core = { path = "../core" }
aiahr-tc = { path = "../tc" }
bumpalo = "3.1.0"
hashbrown = "0.13.1"
rustc-hash = "1.1.0"
