[package]
name = "aiahr-lower-ir"
version = "0.1.0"
edition.workspace = true

[dev-dependencies]
assert_matches.workspace = true
ir-matcher.workspace = true
aiahr-parser.workspace = true
aiahr-desugar.workspace = true
aiahr-test.workspace = true
expect-test.workspace = true

[dependencies]
aiahr-core.workspace = true
aiahr-tc.workspace = true
aiahr-analysis.workspace = true
bumpalo.workspace = true
la-arena.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
