[package]
name = "aiahr-lower-medir"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiahr-core.workspace = true
aiahr-medir.workspace = true
aiahr-optimize-reducir.workspace = true
aiahr-reducir.workspace = true
salsa.workspace = true
