[package]
name = "aiahr-lower-medir"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
aiahr-ast.workspace = true
aiahr-desugar.workspace = true
aiahr-lower-reducir.workspace = true
aiahr-nameres.workspace = true
aiahr-optimize-reducir.workspace = true
aiahr-parser.workspace = true
aiahr-test.workspace = true
aiahr-tc.workspace = true
aiahr-ty.workspace = true
assert_matches.workspace = true
expect-test.workspace = true
pretty.workspace = true

[dependencies]
aiahr-core.workspace = true
aiahr-medir.workspace = true
aiahr-optimize-reducir.workspace = true
aiahr-reducir.workspace = true
salsa.workspace = true
