[package]
name = "aiahr-lower-reducir"
version = "0.1.0"
edition.workspace = true

[dev-dependencies]
aiahr-parser.workspace = true
aiahr-desugar.workspace = true
aiahr-test.workspace = true
assert_matches.workspace = true
expect-test.workspace = true
pretty.workspace = true

[dependencies]
aiahr-ast.workspace = true
aiahr-core.workspace = true
aiahr-reducir.workspace = true
aiahr-tc.workspace = true
aiahr-ty.workspace = true
aiahr-nameres.workspace = true
bumpalo.workspace = true
la-arena.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
