[package]
name = "aiahr-parser"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiahr-core.workspace = true
bumpalo.workspace = true
chumsky.workspace = true
regex.workspace = true

[dev-dependencies]
assert_matches.workspace = true