cabal-version:      2.4
name:               proto
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             thunderseethe
maintainer:         thunderseethe.dev@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: OutsideIn

    other-modules:
      Constraint
      Core
      Fresh
      Program
      Term
      Type
      TVarSet
      Subst
      Generalize
    -- OutsideIn
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base >= 4.15,
        containers ^>= 0.6,
        fused-effects ^>= 1.1,
        lens ^>= 5.1,
        pretty-show ^>= 1.10,
        prettyprinter ^>= 1.7,
        text >= 2.0,
        transformers ^>= 0.5
    ghc-options: -W
    hs-source-dirs:   src
    default-language: Haskell2010
