[package]
name = "aiahr-tc"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
aiahr-parser.workspace = true
aiahr-test.workspace = true
assert_matches.workspace = true

[dependencies]
aiahr-core = { workspace = true, features = ["type_infer"] }
aiahr-desugar = { workspace = true }
aiahr-nameres = { workspace = true }
bumpalo.workspace = true
ena.workspace = true
la-arena.workspace = true
pretty.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
