[package]
name = "aiahr-tc"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
aiahr-parser.workspace = true
aiahr-test.workspace = true
assert_matches.workspace = true

[dependencies]
aiahr-ast.workspace = true
aiahr-core.workspace = true
aiahr-desugar.workspace = true
aiahr-nameres.workspace = true
aiahr-ty = { workspace = true, features = ["type_infer"] }
bumpalo.workspace = true
ena.workspace = true
la-arena.workspace = true
pretty.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
