[package]
name = "aiahr-test"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiahr-core.workspace = true
bumpalo.workspace = true
la-arena.workspace = true
rand.workspace = true
rustc-hash.workspace = true
