[package]
name = "aiahr-ty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
type_infer = ["ena"]

[dependencies]
aiahr-core.workspace = true
bumpalo.workspace = true
ena = { workspace = true, optional = true }
pretty.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
