[package]
name = "ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base.workspace = true
ty.workspace = true
la-arena.workspace = true
pretty.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
