[package]
name = "desugar"
version = "0.1.0"
edition.workspace = true

[dependencies]
ast.workspace = true
base.workspace = true
cst.workspace = true
nameres.workspace = true
ty.workspace = true
bumpalo.workspace = true
la-arena.workspace = true
rustc-hash.workspace = true
salsa.workspace = true

[dev-dependencies]
parser.workspace = true
expect-test.workspace = true
pretty.workspace = true
rand.workspace = true
test-utils.workspace = true
