[package]
name = "emit-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
ast.workspace = true
desugar.workspace = true
lower-reducir.workspace = true
nameres.workspace = true
parser.workspace = true
tc.workspace = true
ty.workspace = true
test-utils.workspace = true
expect-test.workspace = true
pretty.workspace = true
wasmprinter.workspace = true
wasmparser.workspace = true

[dependencies]
base.workspace = true
lower-medir.workspace = true
medir.workspace = true
optimize-reducir.workspace = true
reducir.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
wasm-encoder = "0.32.0"
