[package]
name = "interpreter"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
ast.workspace = true
desugar.workspace = true
nameres.workspace = true
parser.workspace = true
tc.workspace = true
ty.workspace = true
lower-reducir.workspace = true

[dependencies]
base.workspace = true
reducir.workspace = true
im.workspace = true
log.workspace = true
pretty.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
