[package]
name = "lower-reducir"
version = "0.1.0"
edition.workspace = true

[dev-dependencies]
test-utils.workspace = true
assert_matches.workspace = true
expect-test.workspace = true
pretty.workspace = true

[dependencies]
ast.workspace = true
bumpalo.workspace = true
base.workspace = true
desugar.workspace = true
la-arena.workspace = true
nameres.workspace = true
parser.workspace = true
pretty.workspace = true
reducir.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
tc.workspace = true
ty.workspace = true
