[package]
name = "nameres"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base.workspace = true
cst.workspace = true
parser.workspace = true
bumpalo.workspace = true
la-arena.workspace = true
rustc-hash.workspace = true
salsa.workspace = true

[dev-dependencies]
assert_matches.workspace = true
chumsky.workspace = true
test-utils.workspace = true
