[package]
name = "optimize-reducir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
ast.workspace = true
parser.workspace = true
desugar.workspace = true
tc.workspace = true
ty.workspace = true
test-utils.workspace = true
nameres.workspace = true
backtrace-on-stack-overflow = "0.3.0"
expect-test.workspace = true
pretty.workspace = true

[dependencies]
base.workspace = true
lower-reducir.workspace = true
reducir.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
