[package]
name = "optimize-reducir"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
ast.workspace = true
desugar.workspace = true
tc.workspace = true
ty.workspace = true
test-utils.workspace = true
expect-test.workspace = true
pretty.workspace = true

[dependencies]
base.workspace = true
lower-reducir.workspace = true
nameres.workspace = true
parser.workspace = true
reducir.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
