[package]
name = "parser"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base.workspace = true
cst.workspace = true
bumpalo.workspace = true
expect-test.workspace = true
la-arena.workspace = true
logos.workspace = true
regex.workspace = true
rowan.workspace = true
salsa.workspace = true
bit-set = "0.8.0"

[dev-dependencies]
assert_matches.workspace = true
test-utils.workspace = true
