[package]
name = "reducir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base.workspace = true
difference = "2.0"
pretty.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
ty.workspace = true
