[package]
name = "reducir"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base.workspace = true
difference.workspace = true
pretty.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
ty.workspace = true
