[package]
name = "tc"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
parser.workspace = true
test-utils.workspace = true
assert_matches.workspace = true
expect-test.workspace = true

[dependencies]
ast.workspace = true
bumpalo.workspace = true
base.workspace = true
desugar.workspace = true
ena.workspace = true
la-arena.workspace = true
log.workspace = true
nameres.workspace = true
pretty.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
ty = { workspace = true, features = ["type_infer"] }
